--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@ button:active {
     box-shadow: none; /* Remove shadow for arrows */
     width: 14px; /* Set a fixed width for the arrow image */
     height: 14px; /* Set a fixed height for the arrow image */
-    background-image: url('./assets/vector.svg'); /* Set the background image */
+    background-image: url('./assets/Vector.svg'); /* Set the background image */
     background-size: contain; /* Scale the image to fit within the button */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-position: center; /* Center the image */
